# syscNetProto

./: CMakeLists.txt  Makefile  README.md  gitMessage.txt
inc/: MyNetProto.hpp  myNetProto.hpp  syscNetProto.hpp
src/: myNetProto.cpp  syscNetProto.cpp
